# optuna-automl

./: .gitignore  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
optuna_automl/: automl.py  automl_choice.py  automl_component.py  column_transformer.py  data_preprocessing.py  hyperparameters.py  pipeline.py  registry.py
optuna_automl/components/classification/: extra_trees.py  random_forest.py
optuna_automl/components/data_preprocessing/encoding/: count_encoder.py  one_hot_encoder.py  summary_encoder.py  tfidf_vectorizer.py
optuna_automl/components/data_preprocessing/imputation/: simple_imputer.py
optuna_automl/components/feature_preprocessing/: rfe.py  select_from_model.py  select_percentile.py
optuna_automl/pipelines/: basic_pipeline.py
